--- a/report.tex
+++ b/report.tex
@@ -255,6 +255,21 @@ were not high enough to make a definite statement about the trends noted.
 
 \subsection{Visualizing a three-dimensional vector field}
 
+\begin{figure}[H]
+    \includegraphics[width=1\linewidth]{lab5/helix-screenshot.png}
+    \caption{Vector field.}
+    \label{fig:vectors}
+\end{figure}
+
+In this lab we used Paraview to visualize data in a comprehensible manner. The
+first thing we did in Paraview was to visualize the shape of a vector field from
+a dataset provided. We did this through following the steps described in the lab
+description and using this to tweak the appearance of the data to in a clear and
+precise manner describe the vector field. Then end result can be seen in figure
+\ref{fig:vectors}. We decided that slices was the best way to visualize the
+vector field. We also used glyphs to show the direction of the vector field to
+show that the vector field is homogeneous.
+
 \subsection{Analyzing the air quality of a kitchen}
 
 \begin{enumerate}
