--- a/report.tex
+++ b/report.tex
@@ -266,7 +266,7 @@ first thing we did in Paraview was to visualize the shape of a vector field from
 a dataset provided. We did this through following the steps described in the lab
 description and using this to tweak the appearance of the data to in a clear and
 precise manner describe the vector field. Then end result can be seen in figure
-\ref{fig:vectors}. We decided that slices was the best way to visualize the
+\ref{fig:vectors}. We decided that slices was the best way to visualize the.
 vector field. We also used glyphs to show the direction of the vector field to
 show that the vector field is homogeneous.
 
