Final commit before uploading to bilda.

--- a/report.tex
+++ b/report.tex
@@ -166,9 +166,9 @@ surfaces and \textbf{Phong} materials, we could texture the table with our
 seamless tile from the second lab. On the legs we used \textbf{cylindrical
 mapping}.
 
-The ball itself is a straight \textbf{sphere primitive} colored pink with
-\textbf{Phong} material. In contrast to the table's \textit{face} normals the
-ball has \textit{average} normals so that it will not be flat shaded.
+The ball itself is a \textbf{sphere primitive} colored pink with \textbf{Phong}
+material. In contrast to the table's \textit{face} normals the ball has
+\textit{average} normals so that it will not be flat shaded.
 
 \subsubsection{Animation}
 
